# body_detect

./: .gitignore  CMakeLists.txt  Makefile  README.md  body_detect.cpp  cmake_install.cmake  service_name  url.txt
caffe_inference_base/: CMakeLists.txt  Makefile  README.md  cmake_install.cmake
caffe_inference_base/caffe/: CMakeLists.txt  Makefile  caffe.hpp  cmake_install.cmake
caffe_inference_base/caffe/core/: base_layer.hpp  base_layer_builder.hpp  blob.cpp  common_gpu.cpp  common_gpu.hpp  layer_factory.cpp  layer_factory.hpp  net.cpp  syncedmemory.cpp
caffe_inference_base/caffe/layers/: net_builder.cpp  net_builder.hpp
caffe_inference_base/caffe/layers/AbsVal/: absval_layer_base.cpp  absval_layer_base.hpp  absval_layer_builder.cpp  absval_layer_builder.hpp  absval_layer_cpu.cpp  absval_layer_cpu.hpp  absval_layer_cuda.cpp  absval_layer_cuda.hpp
caffe_inference_base/caffe/layers/BatchNorm/: batchnorm_layer_base.cpp  batchnorm_layer_base.hpp  batchnorm_layer_builder.cpp  batchnorm_layer_builder.hpp  batchnorm_layer_cpu.cpp  batchnorm_layer_cpu.hpp  batchnorm_layer_cuda.cpp  batchnorm_layer_cuda.hpp
caffe_inference_base/caffe/layers/Concat/: concat_layer_base.cpp  concat_layer_base.hpp  concat_layer_builder.cpp  concat_layer_builder.hpp  concat_layer_cpu.cpp  concat_layer_cpu.hpp  concat_layer_cuda.cu  concat_layer_cuda.hpp
caffe_inference_base/caffe/layers/Convolution/: conv_layer_base.cpp  conv_layer_base.hpp  conv_layer_builder.cpp  conv_layer_builder.hpp  conv_layer_cpu.cpp  conv_layer_cpu.hpp  conv_layer_cuda.cpp  conv_layer_cuda.hpp  conv_layer_cudnn.cpp  conv_layer_cudnn.hpp
caffe_inference_base/caffe/layers/DepthWiseConvolution/: depthwise_conv_layer_builder.cpp  depthwise_conv_layer_builder.hpp  depthwise_conv_layer_cuda.cu  depthwise_conv_layer_cuda.hpp
caffe_inference_base/caffe/layers/DetectionOutput/: detection_output_layer_base.cpp  detection_output_layer_base.hpp  detection_output_layer_builder.cpp  detection_output_layer_builder.hpp  detection_output_layer_cpu.cpp  detection_output_layer_cpu.hpp  detection_output_layer_cuda.cpp  detection_output_layer_cuda.hpp
caffe_inference_base/caffe/layers/DetectionPoseOutput/: detection_pose_output_layer_base.cpp  detection_pose_output_layer_base.hpp  detection_pose_output_layer_builder.cpp  detection_pose_output_layer_builder.hpp  detection_pose_output_layer_cpu.cpp  detection_pose_output_layer_cpu.hpp  detection_pose_output_layer_cuda.cpp  detection_pose_output_layer_cuda.hpp
caffe_inference_base/caffe/layers/Dropout/: dropout_layer_base.cpp  dropout_layer_base.hpp  dropout_layer_builder.cpp  dropout_layer_builder.hpp  dropout_layer_cpu.cpp  dropout_layer_cpu.hpp  dropout_layer_cuda.cpp  dropout_layer_cuda.hpp
caffe_inference_base/caffe/layers/Eltwise/: eltwise_layer_base.cpp  eltwise_layer_base.hpp  eltwise_layer_builder.cpp  eltwise_layer_builder.hpp  eltwise_layer_cpu.cpp  eltwise_layer_cpu.hpp  eltwise_layer_cuda.cu  eltwise_layer_cuda.hpp
caffe_inference_base/caffe/layers/Flatten/: flatten_layer_base.cpp  flatten_layer_base.hpp  flatten_layer_builder.cpp  flatten_layer_builder.hpp
caffe_inference_base/caffe/layers/InnerProduct/: inner_product_layer_base.cpp  inner_product_layer_base.hpp  inner_product_layer_builder.cpp  inner_product_layer_builder.hpp  inner_product_layer_cpu.cpp  inner_product_layer_cpu.hpp  inner_product_layer_cuda.cpp  inner_product_layer_cuda.hpp
caffe_inference_base/caffe/layers/LRN/: lrn_layer_base.hpp  lrn_layer_builder.cpp  lrn_layer_builder.hpp  lrn_layer_cpu.cpp  lrn_layer_cpu.hpp  lrn_layer_cudnn.cpp  lrn_layer_cudnn.hpp
caffe_inference_base/caffe/layers/Normalize/: normalize_layer_base.cpp  normalize_layer_base.hpp  normalize_layer_builder.cpp  normalize_layer_builder.hpp  normalize_layer_cpu.cpp  normalize_layer_cpu.hpp  normalize_layer_cuda.cpp  normalize_layer_cuda.cu  normalize_layer_cuda.hpp
caffe_inference_base/caffe/layers/PReLU/: prelu_layer_base.cpp  prelu_layer_base.hpp  prelu_layer_builder.cpp  prelu_layer_builder.hpp  prelu_layer_cpu.cpp  prelu_layer_cpu.hpp  prelu_layer_cuda.cu  prelu_layer_cuda.hpp
caffe_inference_base/caffe/layers/Permute/: permute_layer_base.cpp  permute_layer_base.hpp  permute_layer_builder.cpp  permute_layer_builder.hpp  permute_layer_cpu.cpp  permute_layer_cpu.hpp  permute_layer_cuda.cu  permute_layer_cuda.hpp
caffe_inference_base/caffe/layers/Pooling/: pooling_layer_base.cpp  pooling_layer_base.hpp  pooling_layer_builder.cpp  pooling_layer_builder.hpp  pooling_layer_cpu.cpp  pooling_layer_cpu.hpp  pooling_layer_cudnn.cpp  pooling_layer_cudnn.hpp
caffe_inference_base/caffe/layers/PriorBox/: priorbox_layer_base.cpp  priorbox_layer_base.hpp  priorbox_layer_builder.cpp  priorbox_layer_builder.hpp  priorbox_layer_cpu.cpp  priorbox_layer_cpu.hpp  priorbox_layer_cuda.cu  priorbox_layer_cuda.hpp
caffe_inference_base/caffe/layers/Python/: proposal_layer_base.cpp  proposal_layer_base.hpp  python_layer_builder.cpp  python_layer_builder.hpp
caffe_inference_base/caffe/layers/ROIPooling/: roi_pooling_layer_base.cpp  roi_pooling_layer_base.hpp  roi_pooling_layer_builder.cpp  roi_pooling_layer_builder.hpp  roi_pooling_layer_cpu.cpp  roi_pooling_layer_cpu.hpp  roi_pooling_layer_cuda.cu  roi_pooling_layer_cuda.hpp
caffe_inference_base/caffe/layers/ReLU/: relu_layer_base.hpp  relu_layer_builder.cpp  relu_layer_builder.hpp  (+4 more)
caffe_inference_base/caffe/proto/: caffe.pb.cc  proto_io.cpp  proto_io.hpp
caffe_inference_base/caffe/util/: bbox_util.cpp  bbox_util.cu  bbox_util.hpp  blob_util.cpp  blob_util.hpp  frcnn_rpn_util.cpp  frcnn_rpn_util.hpp  im2col.cpp  im2col.cu  im2col.hpp  math_func.cpp  math_func.cu  math_func.hpp  rng.hpp  upgrade_proto.cpp  upgrade_proto.hpp
caffe_inference_base/cmake/: CheckDependencies.cmake  Protoc.cmake
caffe_inference_base/proto/: caffe.proto
caffe_inference_base/test/: CMakeLists.txt  Makefile  blob_test.cpp  cmake_install.cmake  common_test.hpp  face_angle_test.cpp  face_det_test.cpp  faster_rcnn_test.cpp  ict_ssd_test.cpp  landmark_net_test.cpp  ssd_shuffle_test.cpp  ssd_test.cpp
(+68 files in other folders)
